<resources>
    <string name="app_name">SAMANA-ADMIN</string>
    <string name="login_title">SAMANA ADMIN</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="button_login">Login</string>
    <string name="profile_name">Fadhlan Hadaina</string>
    <string name="profile_admin">Admin</string>
    <string name="profile_content_description">Profile Image</string>
    <string name="blank">"</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation_message">Are you sure want to logout?</string>
    <string name="logout_confirmation_yes">Yes</string>
    <string name="logout_confirmation_no">No</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirmation_new_password">Confirmation new password</string>
    <string name="login_success">Successfully logged in!</string>
    <string name="login_fail">Invalid credential</string>
    <string name="update">Update</string>
    <string name="nik">NIK</string>
    <string name="nama">Nama</string>
    <string name="tanggal_lahir">Tanggal lahir</string>
    <string name="input_data_bansos">INPUT DATA BANSOS</string>
    <string name="validasi_data_bansos">VALIDASI DATA BANSOS</string>
    <string name="tanggungan">Tanggungan</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="profesi">Profesi</string>
    <string name="status">Status</string>
    <string name="gaji">Gaji</string>
    <string name="kota_kabupaten">Kota/Kabupaten</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="rt">RT</string>
    <string name="rw">RW</string>
    <string name="alamat">Alamat</string>
    <string name="validasi">Validasi</string>
    <string name="cek_nik">Cek NIK</string>
    <string name="bantuan">Bantuan</string>
    <string name="tahap">Tahap</string>
    <string name="kesehatan">Kesehatan</string>
    <string name="atap">Atap</string>
    <string name="dinding">Dinding</string>
    <string name="lantai">Lantai</string>
    <string name="penerangan">Penerangan</string>
    <string name="air">Air</string>
    <string name="luas_rumah">Luas Rumah</string>
    <string name="submit">Submit</string>
    <string name="validation_confirmation_message">Are you sure want validate this bantuan?</string>
    <string name="validation_confirmation_yes">Yes</string>
    <string name="validasi_confirmation_no">No</string>
    <string name="input_bantuan_confirmation_message">Are you sure want to submit this bantuan?</string>
    <string name="input_bantuan_confirmation_yes">Yes</string>
    <string name="input_bantuan_confirmation_no">No</string>
    <string name="tolak">Tolak</string>
    <string name="validation_denied_confirmation_message">Are you sure want to reject this bantuan data?</string>
    <string name="nama_">Nama:</string>
    <string name="nik_">NIK:</string>
    <string name="tanggal_lahir_">Tanggal lahir:</string>
    <string name="tanggungan_">Tanggungan:</string>
    <string name="pendidkan_">Pendidikan:</string>
    <string name="profesi_">Profesi:</string>
    <string name="status_">Status:</string>
    <string name="gaji_">Gaji:</string>
    <string name="kota_kabupaten_">Kota/kabupaten:</string>
    <string name="kecamatan_">Kecamatan:</string>
    <string name="kelurahan_">Kelurahan:</string>
    <string name="rt_">RT:</string>
    <string name="rw_">RW:</string>
    <string name="alamat_">Alamat:</string>
    <string name="kesehatan_">Kesehatan:</string>
    <string name="atap_">Atap:</string>
    <string name="dinding_">Dinding:</string>
    <string name="lantai_">Lantai:</string>
    <string name="penerangan_">Penerangan</string>
    <string name="air_">Air:</string>
    <string name="luas_rumah_">Luas rumah:</string>
    <string name="clear">Clear</string>
</resources>