<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.HomeActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:contentDescription="@string/blank"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/shape_statusbar_rounded" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="81dp"
        android:layout_height="81dp"
        android:layout_marginStart="28dp"
        android:contentDescription="@string/profile_content_description"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        tools:src="@drawable/ic_baseline_account_circle_24" />

    <TextView
        android:id="@+id/profileNik"
        android:layout_width="215dp"
        android:layout_height="21dp"
        android:fontFamily="@font/raleway"
        android:text="@string/profile_admin"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.68" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="215dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/profile_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.387" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/inputBantuanCV"
        android:layout_width="372dp"
        android:layout_height="96dp"
        android:layout_marginTop="36dp"
        app:cardBackgroundColor="@color/blue_100"
        app:cardCornerRadius="25dp"
        android:checkable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/inputBantuanIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/ic_baseline_input_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens22"
                android:text="@string/input_data_bansos"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/inputBantuanIcon"
                app:layout_constraintStart_toEndOf="@id/inputBantuanIcon"
                app:layout_constraintTop_toTopOf="@id/inputBantuanIcon" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:layout_width="372dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/blue_100"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="@+id/inputBantuanCV"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/inputBantuanCV"
        app:layout_constraintTop_toBottomOf="@+id/inputBantuanCV" />

</androidx.constraintlayout.widget.ConstraintLayout>