<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.ChangePasswordActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens22"
        android:layout_marginTop="@dimen/dimens22"
        android:layout_marginEnd="@dimen/dimens22"
        android:hint="@string/current_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/curPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldNewPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens22"
        android:layout_marginTop="@dimen/dimens22"
        android:layout_marginEnd="@dimen/dimens22"
        android:hint="@string/new_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldPassword"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldPassword"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldConfirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens22"
        android:layout_marginTop="@dimen/dimens22"
        android:layout_marginEnd="@dimen/dimens22"
        android:hint="@string/confirmation_new_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldNewPassword"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldNewPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmNewPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updatePasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/dimens22"
        android:layout_marginTop="@dimen/dimens22"
        android:layout_marginEnd="@dimen/dimens22"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldConfirmPassword" />

    <ProgressBar
        android:id="@+id/updatePasswordProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue_500"
        android:progressTint="#E3F2FD"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/updatePasswordBtn"
        app:layout_constraintStart_toStartOf="@+id/updatePasswordBtn"
        app:layout_constraintTop_toBottomOf="@+id/updatePasswordBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>